# wechat-xpay

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  logging_example.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: apis.md  apis.txt  sdk-api-consistency-report.md  sdk-reference.md
docs/plans/: 2026-03-09-httpx-async-design.md  2026-03-09-sdk-implementation.md
examples/: basic_usage.py  demo.py  examples.py  logging_example.py
tests/: __init__.py  test_async_client.py  test_auth.py  test_client.py  test_logging.py  test_new_apis.py  test_webhook.py
wechat_xpay/: __init__.py  async_client.py  auth.py  base.py  client.py  exceptions.py  models.py  webhook.py
